// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeartButton > should render correctly 1`] = `
<div>
  <div
    class="heart-button"
  >
    <div
      class="heart_div"
    >
      <img
        alt="Hjerte"
        class="solid"
        src="/project1/src/assets/heart-solid.svg"
      />
      <img
        alt="Hjerte"
        src="/project1/src/assets/heart-border.svg"
      />
    </div>
    <div
      class="popup "
    >
      <div
        class="popup-content"
      >
        <p />
      </div>
    </div>
  </div>
</div>
`;

exports[`HeartButton > should render correctly with favorite from localstorage 1`] = `
<div>
  <div
    class="heart-button"
  >
    <div
      class="heart_div"
    >
      <img
        alt="Hjerte"
        class="solid"
        src="/project1/src/assets/heart-solid.svg"
        style="opacity: 1;"
      />
      <img
        alt="Hjerte"
        src="/project1/src/assets/heart-border.svg"
      />
    </div>
    <div
      class="popup "
    >
      <div
        class="popup-content"
      >
        <p />
      </div>
    </div>
  </div>
</div>
`;
